@@ -60,8 +60,13 @@
 #define CONFIGURE_LIBIO_MAXIMUM_FILE_DESCRIPTORS 512
 #define CONFIGURE_USE_IMFS_AS_BASE_FILESYSTEM
 
+/****  Allow override from Makefile.am ****/
+#ifndef CONFIGURE_MICROSECONDS_PER_TICK
 #define CONFIGURE_MICROSECONDS_PER_TICK 1000
-#define CONFIGURE_TICKS_PER_TIMESLICE   20
+#endif
+
+/* Timeslice period = 20ms                */
+#define CONFIGURE_TICKS_PER_TIMESLICE   (20000/CONFIGURE_MICROSECONDS_PER_TICK)
 
 #define CONFIGURE_INIT_TASK_PRIORITY    80
 
