@@ -1,5 +1,10 @@
 	2010-04-22 (T.S.):
 
+	* config.c, Makefile.am: Made clock rate 'overridable' from Makefile.am
+	and use slower rate (100Hz) for uC5282 BSP.
+
+	2010-04-22 (T.S.):
+
 	* ChangeLog: Added
 
 	* config.c: INCREASED SYSTEM CLOCK RATE TO 1kHz (and reduced timeslice
